# ai-asset-pricing

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  MANIFEST.in  README.md  RELEASE.md  pyproject.toml  requirements-plotly.txt
.claude/: settings.json
.claude/agents/: bonds-wrds-expert.html  bonds-wrds-expert.md  crsp-wrds-expert.md  ff-pybondlab-expert.md  ff-wrds-expert.md  jkp-wrds-expert.md  pybondlab-expert.md  pybondlab-orchestrator.md  wrds-query-orchestrator.md
.claude/exemplars/: INDEX.md  agents_best_practices.md  cochrane_writing_tips.md  rules_best_practices.md
.claude/hooks/: cleanup-after-pip.sh  common.sh  compile-tex.sh  preflight-check.sh  session-context.sh
.claude/rules/: academic-writing.md  banned-words.md  grammar-punctuation.md  latex-citations.md  latex-compile.md  latex-conventions.md  presentation-rules.md  pybondlab-timing.md  pybondlab-workflow.md  pybondlab.md  referee-reply.md
.github/workflows/: ci.yml
docs/ai/: core.md  figures.md  onboarding.md  pybondlab.md  wrds.md  writing.md
fintools/: __init__.py  betas.py  lags.py
fintools/figures/: export.py  plotly_ft.py  plots.py  suite.py  validation.py
tests/: conftest.py  test_bootstrap_local_state.py  test_context_drift.py  test_fintools.py  test_onboard_probe.py  test_onboarding_smoke.py  test_publication_figures.py  test_pybondlab_baseline.py  test_release_preflight.py
tools/: bootstrap.py  context_drift.py  download_validation_data.py  figure_examples.py  local_state.py  onboard_probe.py  onboarding_smoke_test.py  release_preflight.py
(+41 files in other folders)
