[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "fintools"
version = "0.1.0"
description = "Shared utilities for empirical asset pricing research"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    {name = "Alex Dickerson", email = "alexander.dickerson1@unsw.edu.au"},
]
keywords = ["empirical finance", "asset pricing", "WRDS", "corporate bonds", "factor construction"]
dependencies = [
    "pandas>=2.0",
    "psycopg2-binary>=2.9",
    "numpy>=1.24",
    "pyarrow>=10.0",
    "matplotlib>=3.7",
    "seaborn>=0.13",
    "statsmodels>=0.14",
    "scipy>=1.9",
    "numba>=0.57",
    "python-docx>=1.2",
    "Pillow>=10",
]

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["fintools*"]

[tool.setuptools.package-data]
"fintools.datasets" = ["validation/*.csv", "validation/*.json"]
